BIDX-1666 & a Layout issue for home page

--- a/wp-content/plugins/bidx-plugin/static/less/base.less
+++ b/wp-content/plugins/bidx-plugin/static/less/base.less
@@ -1112,7 +1112,7 @@ form .error-separate
         /* header controls */
 
         header.navbar .bidx-header-controls {
-            margin-top:                 34px;
+            margin-top:                 10px;
         }
 
         header.navbar .bidx-header-controls .btn {
